--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Basic
-title: 潘柏信
+title: Terry
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
 avatarTitle: leopardpan
 # 头像里面的描述
 avatarDesc: iOS / 机器学习
-url: "http://leopardpan.cn"
+url: "http://blog.pro168.one"
 
 # 博客是否自动生成目录，false为不生成
 enableToc: true
 
 # Comment
 comment:
-    # livere: MTAyMC81MDk5NC8yNzQ3Ng  # https://www.livere.com
+    # livere: MTAyMC81MDk5NC8yNzQ3Ng  # http://blog.pro168.one
     disqus: leopard
     # uyan: 2143225  # 有言id,登录有言官网申请
 
@@ -25,7 +25,7 @@ social:
     # juejin: xxx
     jianshu: 2ada30d8d0f7
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: 81850658@qq.com
 
 
 # 百度统计 
@@ -44,7 +44,7 @@ ga:
 #
 #
 #  _post/ 下的文章更换成你自己的文章
-#  帮忙star一下，感谢~😆 地址： https://github.com/leopardpan/leopardpan.github.io
+#  帮忙star一下，感谢~😆 地址： http://blog.pro168.one
 #
 #
 # 《--------------- 下面的信息可以自行选择是否修改 ------------------------》
