--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Terry
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: Terry
 # 头像里面的描述
 avatarDesc: iOS / 机器学习
 url: "http://blog.pro168.one"
@@ -20,7 +20,7 @@ comment:
 # Social
 social:
     weibo: 5366874726 
-    github: leopardpan
+    github: Terry
     # zhihu: panpanleopard
     # juejin: xxx
     jianshu: 2ada30d8d0f7
