--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: 欢迎来到我的个人站~
 # 头像里面的标题
 avatarTitle: Terry
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
+avatarDesc: 运维 / 服务器
 url: "http://blog.pro168.one"
 
 # 博客是否自动生成目录，false为不生成
@@ -19,12 +19,6 @@ comment:
 
 # Social
 social:
-    weibo: 5366874726 
-    github: Terry
-    # zhihu: panpanleopard
-    # juejin: xxx
-    jianshu: 2ada30d8d0f7
-    # twitter: 
     mail: 81850658@qq.com
 
 
@@ -40,26 +34,6 @@ ga:
     host: auto  
 
 
-# 《----------------- 上面的信息修改成你自己的 ---------------------------》
-#
-#
-#  _post/ 下的文章更换成你自己的文章
-#  帮忙star一下，感谢~😆 地址： http://blog.pro168.one
-#
-#
-# 《--------------- 下面的信息可以自行选择是否修改 ------------------------》
-
-
-permalink: /:year/:month/:title/
-# Format
-highlighter: rouge
-
-textColor: #FF0000
-
-# supported colors: blue, green, purple, red, orange or slate. If you need clear, leave it empty.
-cover_color: clear
-
-# The blog button should not be removed.
 blog_button:
     title: 博客主页
 
